--- a/.env
+++ b/.env
@@ -1,1 +1,6 @@
 VITE_APP_BASE_URL="https://etb.uur.co.in:8008/api"
+
+VITE_APP_STORAGE_ACCOUNT_NAME=motopoint1
+VITE_APP_CONTAINER_NAME=etb
+VITE_APP_BLOB_SAS_TOKEN=sp=racwdli&st=2024-12-20T08:01:55Z&se=2040-12-20T16:01:55Z&sv=2022-11-02&sr=c&sig=0r42UtwE%2F4ic5wsDnF2NUpv1MnoMqZzi%2B7M5mEfcxkg%3D
+VITE_APP_BLOB_SAS_URL=https://motopoint1.blob.core.windows.net/etb?sp=racwdli&st=2024-12-20T08:01:55Z&se=2040-12-20T16:01:55Z&sv=2022-11-02&sr=c&sig=0r42UtwE%2F4ic5wsDnF2NUpv1MnoMqZzi%2B7M5mEfcxkg%3D
