--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-VITE_APP_BASE_URL="https://etb.uur.co.in:8008/api"
+VITE_APP_BASE_URL="https://cleansameday.com:4000/api"
 
 VITE_APP_STORAGE_ACCOUNT_NAME=motopoint1
 VITE_APP_CONTAINER_NAME=etb
