dash board final push

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 VITE_APP_BASE_URL="https://cleansameday.com:4000/api"
 
-VITE_APP_STORAGE_ACCOUNT_NAME=motopoint1
-VITE_APP_CONTAINER_NAME=etb
-VITE_APP_BLOB_SAS_TOKEN=sp=racwdli&st=2024-12-20T08:01:55Z&se=2040-12-20T16:01:55Z&sv=2022-11-02&sr=c&sig=0r42UtwE%2F4ic5wsDnF2NUpv1MnoMqZzi%2B7M5mEfcxkg%3D
-VITE_APP_BLOB_SAS_URL=https://motopoint1.blob.core.windows.net/etb?sp=racwdli&st=2024-12-20T08:01:55Z&se=2040-12-20T16:01:55Z&sv=2022-11-02&sr=c&sig=0r42UtwE%2F4ic5wsDnF2NUpv1MnoMqZzi%2B7M5mEfcxkg%3D
+VITE_APP_STORAGE_ACCOUNT_NAME=samedaycleanstorageacc
+VITE_APP_CONTAINER_NAME=clean
+VITE_APP_BLOB_SAS_TOKEN=sp=sp=racwdli&st=2025-01-09T14:37:44Z&se=2030-06-30T22:37:44Z&sv=2022-11-02&sr=c&sig=drkixlGMKsgM%2FQgR2EOMJLYYpgj4X2CMKg30lsDzidM%3D
+VITE_APP_BLOB_SAS_URL=https://samedaycleanstorageacc.blob.core.windows.net/clean?sp=racwdli&st=2025-01-09T14:37:44Z&se=2030-06-30T22:37:44Z&sv=2022-11-02&sr=c&sig=drkixlGMKsgM%2FQgR2EOMJLYYpgj4X2CMKg30lsDzidM%3D
