--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@azure/storage-blob": "^12.26.0",
     "@heroicons/react": "^2.2.0",
     "@material-tailwind/react": "^2.1.10",
+    "@tanstack/react-query": "^5.66.9",
     "axios": "^1.7.9",
     "chart.js": "^4.4.7",
     "date-fns": "^4.1.0",
@@ -24,6 +25,7 @@
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.4.0",
+    "react-query": "^3.39.3",
     "react-router-dom": "^7.0.2",
     "react-spinners": "^0.15.0"
   },
